[workspace]
resolver = "2"

members = [
  "common",
  "filegen",
  "rcmp",
  "rcp",
  "remote",
  "rlink",
  "rrm",
  "throttle",
]

[workspace.lints.clippy]
# Deny all warnings to enforce code quality
all = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
# Deny documentation warnings
all = { level = "deny", priority = -1 }
# Allow missing crate-level docs for binary crates
missing_crate_level_docs = "allow"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 8 # default 16
debug = 1
lto = "thin"
