[package]
name = "common"
version = "0.18.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
bincode = "1.3"
bytesize = "1.3"
chrono = "0.4"
console-subscriber = "0.2"
enum-map = "2.7"
futures = "0.3"
humantime = "2.1"
indicatif = "0.17"
lazy_static = "1.4"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "user"] }
procfs = "0.16"
sysinfo = "0.30"
thiserror = "1.0"
thread_local = "1.1"
throttle = { path = "../throttle" }
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-test = "0.2"
