[package]
name = "rcp-tools-congestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal library for RCP tools - pluggable congestion-control algorithms and a deterministic scenario simulator (not intended for direct use)"
readme = "../README.md"
documentation = "https://docs.rs/rcp-tools-congestion"
keywords = ["internal", "congestion", "bbr"]
categories = ["development-tools"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["--config", "build.rustflags=[\"--cfg\", \"tokio_unstable\"]"]
rustdoc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "congestion"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
