[package]
name = "filegen"
version = "0.12.0"
description = "Tool for generating filesets typically used for testing."
license = "MIT"
edition = "2021"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
bytesize = "1.3"
rand = "0.8"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing-subscriber = "0.3"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/filegen", dest = "/usr/bin/filegen", mode = "755" } ]