[package]
name = "rcp-tools-filegen"
version.workspace = true
description = "Test fileset generator - creates sample directory structures and files for testing file operations"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://github.com/wykurz/rcp#readme"
keywords = ["cli", "file", "generator", "testing", "benchmark"]
categories = ["command-line-utilities", "development-tools::testing"]

[lints]
workspace = true

[[bin]]
name = "filegen"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
bytesize = "1.3"
clap = { version = "4", features = ["derive"] }
common = { workspace = true }
rand = "0.8"
thiserror = "1.0"
throttle = { workspace = true }
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/filegen", dest = "/usr/bin/filegen", mode = "755" } ]