[package]
name = "rcmp"
version = "0.12.0"
description = "Tool for comparing large filesets."
license = "MIT"
edition = "2021"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
common = { path = "../common" }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rcmp", dest = "/usr/bin/rcmp", mode = "755" } ]