[package]
name = "rcp-tools-rcmp"
version = "0.19.0"
description = "Tool for comparing large filesets."
license = "MIT"
edition = "2021"

[[bin]]
name = "rcmp"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rcmp", dest = "/usr/bin/rcmp", mode = "755" } ]