[package]
name = "rcp-tools-rcmp"
version.workspace = true
description = "Fast file comparison tool - efficiently compares metadata across large filesets"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://github.com/wykurz/rcp#readme"
keywords = ["cli", "file", "compare", "diff", "performance"]
categories = ["command-line-utilities", "filesystem"]

[lints]
workspace = true

[[bin]]
name = "rcmp"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rcmp", dest = "/usr/bin/rcmp", mode = "755" } ]