[package]
name = "rcp"
version = "0.10.0"
description = "Tool for copying files similar to cp but MUCH faster."
license = "MIT"
edition = "2021"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
common = { path = "../common" }
structopt = "0.3"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rcp", dest = "/usr/bin/rcp", mode = "755" } ]