[package]
name = "rcp-tools-rcp"
version = "0.19.0"
description = "Fast file operations tools - rcp (copy) and rcpd (remote copy daemon)"
license = "MIT"
edition = "2021"
repository = "https://github.com/wykurz/rcp"
keywords = ["cli", "file", "copy", "remote", "performance"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rcp"
path = "src/bin/rcp.rs"

[[bin]]
name = "rcpd"
path = "src/bin/rcpd.rs"

[lib]
name = "rcp_tools_rcp"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
bincode = "1.3"
bytes = "1.10"
bytesize = "1.3"
common = { path = "../common" }
enum-map = "2.7"
futures = "0.3"
quinn = "0.10"
rand = "0.8"
regex = "1.11"
remote = { path = "../remote" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
throttle = { path = "../throttle" }
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rcp", dest = "/usr/bin/rcp", mode = "755" },
    { source = "target/release/rcpd", dest = "/usr/bin/rcpd", mode = "755" }
]
