[package]
name = "rcp-tools-rcp"
version.workspace = true
description = "Fast file operations tools - rcp (copy) and rcpd (remote copy daemon)"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/rcp-tools-rcp"
keywords = ["cli", "file", "copy", "remote", "performance"]
categories = ["command-line-utilities", "filesystem"]

[lints]
workspace = true

[[bin]]
name = "rcp"
path = "src/bin/rcp.rs"

[[bin]]
name = "rcpd"
path = "src/bin/rcpd.rs"

[lib]
name = "rcp_tools_rcp"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
filetime = "0.2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
async-recursion = "1.1"
bincode = "1.3"
bytes = "1.10"
bytesize = "1.3"
clap = { version = "4", features = ["derive"] }
common = { workspace = true }
enum-map = "2.7"
futures = "0.3"
hex = "0.4"
rand = "0.8"
regex = "1.11"
remote = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
throttle = { workspace = true }
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tracing = "0.1"

[package.metadata.docs.rs]
cargo-args = ["--config", "build.rustflags=[\"--cfg\", \"tokio_unstable\"]"]
rustdoc-args = ["--cfg", "tokio_unstable"]

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rcp", dest = "/usr/bin/rcp", mode = "755" },
    { source = "target/release/rcpd", dest = "/usr/bin/rcpd", mode = "755" }
]
