[package]
name = "rcp-tools-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal library for RCP tools - remote copy protocol and networking (not intended for direct use)"
readme = "../README.md"
documentation = "https://docs.rs/rcp-tools-remote"
keywords = ["internal", "remote", "quic"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
name = "remote"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
bincode = "1.3"
bytes = "1.10"
chrono = "0.4"
common = { package = "rcp-tools-common", version = "0.19.0", path = "../common" }
enum-map = "2.7"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
openssh = "0.11"
quinn = "0.10"
rand = "0.8"
rcgen = "0.11"
ring = "0.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"