[package]
name = "rlink"
version = "0.19.0"
description = "Tool for hard-linking files inspired by pcp/dsync."
license = "MIT"
edition = "2021"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
common = { path = "../common" }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rlink", dest = "/usr/bin/rlink", mode = "755" } ]