[package]
name = "rcp-tools-rlink"
version.workspace = true
description = "Fast hard-linking tool - efficiently creates hard links for large filesets (inspired by pcp/dsync)"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://github.com/wykurz/rcp#readme"
keywords = ["cli", "file", "hardlink", "link", "performance"]
categories = ["command-line-utilities", "filesystem"]

[lints]
workspace = true

[[bin]]
name = "rlink"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rlink", dest = "/usr/bin/rlink", mode = "755" } ]