[package]
name = "rcp-tools-rrm"
version = "0.19.0"
description = "Tool for removing files similar to rm but MUCH faster."
license = "MIT"
edition = "2021"

[[bin]]
name = "rrm"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rrm", dest = "/usr/bin/rrm", mode = "755" } ]