[package]
name = "rcp-tools-rrm"
version.workspace = true
description = "Fast file removal tool - efficiently removes large filesets (similar to rm -rf but much faster)"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/rcp-tools-rrm"
keywords = ["cli", "file", "remove", "delete", "performance"]
categories = ["command-line-utilities", "filesystem"]

[lints]
workspace = true

[[bin]]
name = "rrm"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
clap = { version = "4", features = ["derive"] }
common = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"

[package.metadata.deb]
maintainer = "Mateusz Wykurz <wykurz@gmail.com>"
copyright = "2023, Mateusz Wykurz <wykurz@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utility"

[package.metadata.generate-rpm]
assets = [ { source = "target/release/rrm", dest = "/usr/bin/rrm", mode = "755" } ]