[package]
name = "throttle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal library for RCP tools - resource throttling and rate limiting (not intended for direct use)"
readme = "../README.md"
documentation = "https://docs.rs/throttle"
keywords = ["internal", "throttle", "ratelimit"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"