[package]
name = "rcp-tools-throttle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal library for RCP tools - resource throttling and rate limiting (not intended for direct use)"
readme = "../README.md"
documentation = "https://docs.rs/rcp-tools-throttle"
keywords = ["internal", "throttle", "ratelimit"]
categories = ["development-tools"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["--config", "build.rustflags=[\"--cfg\", \"tokio_unstable\"]"]
rustdoc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "throttle"

[dependencies]
tokio = { version = "1.38", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"